--- a/assets/index.html
+++ b/assets/index.html
@@ -6,6 +6,24 @@
         {%favicon%}
         {%css%}
         <link rel="stylesheet" href="/assets/css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+        <style>
+            :root {
+                --background-primary: #F9FAFB;
+                --background-secondary: #FFFFFF;
+                --text-primary: #1A202C;
+                --text-secondary: #718096;
+                --color-primary: #6E72FC;
+                --color-error: #E53E3E;
+                --color-success: #38A169;
+                --color-graph-1: #6E72FC;
+                --color-graph-2: #ED8936;
+                --color-graph-3: #9F7AEA;
+                --border-color: #E2E8F0;
+                --hover-background: #F7FAFC;
+                --font-family: 'Lexend', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            }
+        </style>
     </head>
     <body>
         {%app_entry%}
